# 2Keys-os

./: .gitignore  ARM-spec.json  Cargo.toml  Makefile  README.md  link.ld  setup.sh
boot/: Cargo.toml
boot/src/: constants.S  lib.rs  main.S
drivers/core/: Cargo.toml
drivers/core/src/: constants.rs  gpio.rs  lib.rs
drivers/uart/: Cargo.toml
drivers/uart/src/: constants.rs  lib.rs  uart.rs  uart1.rs
src/: main.rs
