[package]
name = "twokeys-os"
version = "0.1.0"
authors = ["Kishan <kishansambhi@hotmail.co.uk>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
twokeys_os_boot = { path = "./boot"}
uart = { path = "./drivers/uart"}


[target.aarch64-unknown-none]
rustflags = [
  "-C", "link-arg=-Tlink.ld",
  "-C", "target-feature=-fp-armv8",
  "-C", "target-cpu=cortex-a53",
]
